[package]
name = "leptos-openid-connect"
version = "0.1.0"
edition = "2024"
description = "OpenID Connect for the Leptos framework"
license = "MIT"
repository = "https://github.com/holokube-io/leptos-openid-connect"
authors = [
  "Leonard Seibold <git@zrtx.de>",
  "Daniél Kerkmann <daniel@kerkmann.dev>",
]

[dependencies]
leptos = { version = "0.7", default-features = false }
leptos_router = { version = "0.7", default-features = false }
oauth2 = { version = "4.4", default-features = false, features = [
  "pkce-plain",
] }
leptos-use = { version = "0.15", default-features = false, features = [
  "storage",
  "use_timeout_fn",
] }
jwt = { version = "0.16", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
  "wasmbind",
] }
serde = { version = "1.0", default-features = false, deatures = ["derive"] }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "2.0", default-features = false }
jsonwebtoken = { version = "9.3", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
codee = { version = "0.2", features = ["bincode_serde"] }

[features]
default = []
ssr = []
